# diversifier

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  main.py  performance_metrics.json  pyproject.toml  test-config.toml
.claude/agents/: e2e-test-generator.md  mcp-server-developer.md
.claude/commands/: work-issue.md
.github/workflows/: black.yml  example-full-stack-fastapi.yml  flake8.yml  mypy.yml  pytest.yml  ruff.yml  test-generation-validation.yml
examples/: llm_config_example.py
src/: cli.py  validation.py
src/mcp_servers/: base_client.py
src/mcp_servers/command/: __init__.py  client.py  launcher.py  server.py
src/mcp_servers/docker/: __init__.py  launcher.py  server.py
src/mcp_servers/filesystem/: __init__.py  client.py  launcher.py  server.py
src/mcp_servers/git/: __init__.py  launcher.py  server.py
src/mcp_servers/testing/: __init__.py  launcher.py  server.py
src/orchestration/: __init__.py  acceptance_test_generator.py  agent.py  config.py  coordinator.py  doc_analyzer.py  efficient_test_generator.py  error_handling.py  exceptions.py  exit_codes.py  focused_test_generator.py  langsmith_config.py  library_usage_analyzer.py  llm_factory.py  logging_config.py  mcp_manager.py  performance.py  simple_workflow.py  source_code_analyzer.py  test_discovery.py  test_generation_workflow.py  user_feedback.py  workflow.py  workflow_manager.py
src/orchestration/prompts/: acceptance_test_generator.txt  analyzer.txt  doc_analyzer.txt  docker_service_discovery.txt  migrator.txt  react_test_setup.txt  repairer.txt  source_code_analyzer.txt  test_dev_requirements.txt  test_results_analysis.txt  tester.txt
src/orchestration/test_generation/: __init__.py  call_graph_test_discovery.py  efficient_test_generator.py  focused_test_generator.py  library_usage_analyzer.py  test_coverage_selector.py  test_discovery.py
src/orchestration/test_running/: llm_test_runner.py  simple_test_runner.py
src/test_running/: __init__.py  cli.py  llm_test_runner.py  simple_test_runner.py
tests/: conftest.py  test_acceptance_test_generator.py  test_call_graph_test_discovery.py  test_cli.py  test_command_mcp.py  test_config.py  test_coordinator_simple.py  test_coordinator_simplified.py  test_coordinator_test_generation.py  test_doc_analyzer.py  test_docker_mcp.py  test_exceptions.py  test_exit_codes.py  test_filesystem_mcp.py  test_git_mcp.py  test_langsmith_config.py  test_library_usage_analyzer.py  test_llm_factory.py  test_llm_test_runner.py  test_logging_config.py  test_orchestration.py  test_performance.py  test_simple_workflow.py  test_source_code_analyzer.py  test_test_discovery.py  test_test_generation_workflow.py  test_testing_mcp.py  test_user_feedback.py  test_validation.py  test_workflow_manager.py
