[project]
name = "diversifier"
version = "0.1.0"
description = "AI-powered tool to generate diversified project variants via dependency mutation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.2.14",
    "mcp>=1.1.0",
    "docker>=7.1.0",
    "langgraph>=0.6.4",
    "gitpython>=3.1.45",
    "langchain-anthropic>=0.3.18",
    "langchain-google-genai>=2.1.9",
]

[project.scripts]
diversifier = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.8.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.1.0",
    "types-docker>=7.1.0.20241217",
]

[tool.ruff]
# Target Python 3.13
target-version = "py313"
# Same line length as black
line-length = 88

[tool.ruff.lint]
# Enable F rules (Pyflakes) + PLC0415 for import in functions check + critical E/W rules
select = [
    "F",       # Pyflakes (replaces flake8 --select F)
    "E4",      # Import related errors  
    "E7",      # Statement errors
    "E9",      # Runtime errors
    "W6",      # Deprecation warnings
    "PLC0415", # import-outside-top-level (import in functions check)
]

# Skip minor warnings, keep only high priority errors
ignore = [
    "E701",   # Multiple statements on one line (colon) - minor style
    "E702",   # Multiple statements on one line (semicolon) - minor style  
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--timeout=300",
    "--timeout-method=signal",
    "-v"
]

